@@ -1,5 +1,9 @@
 2015-11-04  Ola Jeppsson  <ola@adapteva.com>
 
+	* multicore/domino.c: New test.
+
+2015-11-04  Ola Jeppsson  <ola@adapteva.com>
+
 	* multicore/e-lib-inl.h: Minimal inline implementation of
 	e-lib.
 	* multicore/multicore.exp: New file for multicore C tests.
